# HIRenderer

./: CMakeLists.txt  README.md  main.cpp
3DPrimitives/: box.cpp  box.h
Cameras/: Camera.cpp  Camera.h
Cameras/Camera/: Camera.h
Cameras/Ray/: Ray.h
Materials/: Material.cpp  Material.h
Math/: PixelRayCollection.cpp  PixelRayCollection.h  Ray.cpp  Ray.h  Vec3.cpp  Vec3.h  ray.cpp  ray.h
Privitives/: Color.cpp  Color.h  Point.cpp  Point.h  Primitive.cpp  Primitive.h
Privitives/2D/: Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h
Privitives/3D/: Box.cpp  Box.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  sphere.cpp  sphere.h
Privitives/Lights/: Light.cpp  Light.h  PointLight.cpp  PointLight.h
Renderer/: JpegSaver.cpp  JpegSaver.h  RenderParams.cpp  RenderParams.h  Renderer.cpp  Renderer.h  Saver.cpp  Saver.h  saver.cpp  saver.h
Scene/: Scene.cpp  Scene.h
tests/: TempTests.cpp  Vec3Tests.cpp
tests/Cameras/: CamerasTests.cpp
tests/Math/Vec3/: Vec3OperatorsTests.cpp
tests/Primitives/: SphereTests.cpp
tests/Primitives/Lights/: PointLightTests.cpp
tests/Primitives/Point/: PointGettersTests.cpp  PointOperatorsTests.cpp
tests/Primitives/Primitive/: PrimitiveGettersTests.cpp
